# notmuch

./: .dir-locals.el  .gitignore  .hgignore  .hgtags  .mailmap  .travis.yml  AUTHORS  CONTRIBUTING  COPYING  COPYING-GPL-3  INSTALL  Makefile  Makefile.config  Makefile.global  Makefile.local  NEWS  README  README.rst  RELEASING  TODO  add-files.c  changelog  command-line-arguments.c  command-line-arguments.h  configure  control  copyright  crypto.c  database-private.h  database.cc  date.c  debugger.c  dump-restore-private.h  elpa-notmuch.elpa  g_mime_test.c  getlinetest.c  ggc.cc  git-remote-notmuch.c  gmime-filter-headers.c  gmime-filter-headers.h  (+386 more)
bindings/: Makefile.local
cnotmuch/: __init__.py  database.py  globals.py  message.py  notmuch.py  tags.py  thread.py
compat/: .gitignore  Makefile  Makefile.local  README  canonicalize_file_name.c  check_asctime.c  check_getpwuid.c  compat.h  function-attributes.h  gen_zlib_pc.c  getdelim.c  getline.c  have_canonicalize_file_name.c  have_d_type.c  have_getline.c  have_strcasestr.c  have_strsep.c  have_timegm.c  strcasestr.c  strsep.c  timegm.c
completion/: Makefile.local  README  notmuch-completion.bash  notmuch-completion.zsh
config/: README
contrib/: .gitattributes  nmbug  notmuch-completion.tcsh  notmuch-completion.zsh
contrib/notmuch-deliver/: .gitignore  .mailmap  Makefile.am  README.mkd  autogen.sh  configure.ac
contrib/notmuch-deliver/maildrop/maildir/: Makefile.am  configure.in  maildircreate.c  maildircreate.h  maildirmisc.h  maildirmkdir.c  maildiropen.c
contrib/notmuch-deliver/maildrop/numlib/: Makefile.am  atotimet.c  atouidt.c  changeuidgid.c  configure.in  numlib.h  strdevt.c  strgidt.c  strhdevt.c  strhinot.c  strhpidt.c  strhtimet.c  strinot.c  strofft.c  strpidt.c  strsize.c  strsizet.c  strtimet.c  struidt.c
contrib/notmuch-deliver/numlib/: Makefile.am  changeuidgid.c  numlib.h  strgidt.c  strinot.c  strtimet.c  struidt.c
contrib/notmuch-deliver/src/: Makefile.am  main.c
debian/: .gitignore  NEWS  NEWS.Debian  README.Debian  changelog  control  copyright  elpa-notmuch.elpa  elpa-notmuch.info  elpa-notmuch.install  elpa-notmuch.lintian-overrides  gbp.conf  libnotmuch-dev.install  libnotmuch1.symbols  libnotmuch2.symbols  libnotmuch3.install  libnotmuch3.symbols  libnotmuch4.install  libnotmuch4.symbols  libnotmuch5.symbols  libnotmuch5t64.lintian-overrides  libnotmuch5t64.symbols  notmuch-doc.install  notmuch-emacs.README.Debian  notmuch-emacs.dirs  notmuch-emacs.emacsen-install  notmuch-emacs.emacsen-remove  notmuch-emacs.install  notmuch-emacs.maintscript  notmuch-emacs.postinst  notmuch-emacs.prerm  notmuch-git.install  notmuch-git.manpages  notmuch-mutt.docs  notmuch-mutt.install  notmuch-mutt.manpages  notmuch-vim.dirs  notmuch-vim.install  notmuch-vim.neovim-addon  notmuch-vim.vim-addon  (+11 more)
devel/: RELEASING  STYLE  TODO  author-scan.sh  check-notmuch-commit  check-out-of-tree-build.sh  emacs-keybindings.org  gen-testdb.sh  man-to-mdwn.pl  news2wiki.pl  out-of-tree-build-check.sh  printmimestructure  release-checks.sh  schemata  try-emacs-mua  uncrustify.cfg
doc/: .gitignore  INSTALL  Makefile  Makefile.local  command-line.rst  conf.py  doxygen.cfg  elisp.py  index.rst  mkdocdeps.py  notmuch-emacs.rst  prerst2man.py  python-bindings.rst  queries.rst
emacs/: .gitignore  Makefile.local  autoloads-gen.el  coolj.el  make-deps.el  notmuch-address.el  notmuch-company.el  notmuch-compat.el  notmuch-crypto.el  notmuch-draft.el  notmuch-emacs-mua  notmuch-emacs-mua.desktop  notmuch-hello.el  notmuch-jump.el  notmuch-lib.el  notmuch-maildir-fcc.el  notmuch-message.el  notmuch-mua.el  notmuch-parser.el  notmuch-pkg.el.tmpl  notmuch-print.el  notmuch-query.el  notmuch-show.el  notmuch-tag.el  notmuch-tree.el  notmuch-version.el.tmpl  notmuch-wash.el  notmuch.el  rstdoc.el  rstdoc.rsti
lib/: Makefile  Makefile.local  add-message.cc  built-with.c  config.cc  database-private.h  database.cc  directory.cc  features.cc  filenames.c  gen-version-script.sh  index.cc  indexopts.c  init.cc  lastmod-fp.cc  lastmod-fp.h  libsha1.c  libsha1.h  message-file.c  message-id.c  message-private.h  message-property.cc  message.cc  messages.c  notmuch-private.h  notmuch.h  notmuch.sym  open.cc  parse-sexp.cc  parse-time-vrp.cc  parse-time-vrp.h  prefix.cc  query-fp.cc  query-fp.h  query.cc  regexp-fields.cc  regexp-fields.h  sexp-fp.cc  sexp-fp.h  sha1.c  (+8 more)
man/: .gitignore  Makefile.local
notmuch/: __init__.py  database.py  message.py  tag.py  thread.py
packaging/: debian
parse-time-string/: Makefile.local  README  parse-time-string.c  parse-time-string.h
performance-test/: .gitignore  00-new  01-dump-restore  02-tag  M00-new.sh  M01-dump-restore  M01-dump-restore.sh  M02-show.sh  M03-search.sh  M04-reply.sh  M05-reindex.sh  M06-insert.sh  M07-git-remote.sh  Makefile.local  README  T00-new.sh  T01-dump-restore.sh  T02-tag.sh  T03-reindex.sh  T04-thread-subquery.sh  T05-ruby.sh  T06-emacs.sh  T07-git.sh  T08-git-remote.sh  basic  notmuch-memory-test  notmuch-perf-test  notmuch-time-test  perf-test-lib.sh  version.sh
test/: .gitignore  Makefile  Makefile.local  README  T000-basic.sh  T010-help-test.sh  T020-compact.sh  T030-config.sh  T035-read-config.sh  T040-setup.sh  T050-new.sh  T051-new-renames.sh  T055-path-config.sh  T060-count.sh  T070-insert.sh  T080-search.sh  T081-sexpr-search.sh  T090-search-output.sh  T095-address.sh  T100-search-by-folder.sh  T110-search-position-overlap-bug.sh  T120-search-insufficient-from-quoting.sh  T130-search-limiting.sh  T131-show-limiting.sh  T140-excludes.sh  T150-tagging.sh  T160-json.sh  T170-sexp.sh  T180-text.sh  T190-multipart.sh  T200-thread-naming.sh  T205-author-naming.sh  T206-author-separator.sh  T210-raw.sh  T220-reply.sh  T230-reply-to-sender.sh  T240-dump-restore.sh  T250-uuencode.sh  T260-thread-order.sh  T270-author-order.sh  (+189 more)
util/: Makefile.local  crypto.c  crypto.h  endian-util.h  error_util.c  error_util.h  gmime-extra.c  gmime-extra.h  hex-escape.c  hex-escape.h  path-util.c  path-util.h  repair.c  repair.h  string-util.c  string-util.h  talloc-extra.c  (+10 more)
(+575 files in other folders)
