#
# Copyright 1998 - 2004 Double Precision, Inc.  See COPYING for
# distribution information.


CLEANFILES=$(noinst_DATA)
noinst_LTLIBRARIES=libnumlib.la

libnumlib_la_SOURCES=\
	atotimet.c \
	atouidt.c \
	changeuidgid.c \
	numlib.h \
	strdevt.c \
	strgidt.c \
	strhdevt.c \
	strhinot.c \
	strhpidt.c \
	strhtimet.c \
	strinot.c \
	strofft.c \
	strpidt.c \
	strsize.c \
	strsizet.c \
	strtimet.c \
	struidt.c
