dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.7 2010/03/19 01:09:26 mrsam Exp $
dnl
dnl Copyright 1998 - 2010 Double Precision, Inc.  See COPYING for
dnl distribution information.

AC_PREREQ(2.59)
AC_INIT(numlib, 0.10, courier-users@lists.sourceforge.net)

>confdefs.h  # Kill PACKAGE_ macros

AC_CONFIG_SRCDIR([atotimet.c])
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([foreign no-define])
 
dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

if test "$GCC" = "yes"
then
	CFLAGS="$CFLAGS -Wall"
fi

dnl Checks for libraries.

dnl Checks for header files.

AC_CHECK_HEADERS(unistd.h stdint.h)

AC_CHECK_TYPE(int64_t, [ : ],
		       [
		       AC_DEFINE_UNQUOTED(int64_t,long long,[default definition of int64_t])
		       ])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UID_T
AC_TYPE_PID_T

dnl Checks for library functions.

AC_CHECK_FUNCS(setgroups initgroups)
AC_OUTPUT(Makefile)
